k8s/services/jitsi-jicofo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jicofo
  namespace: shopno-apps
  labels:
    app.kubernetes.io/name: jitsi-jicofo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jitsi-jicofo
