k8s/services/jitsi-jicofo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-jicofo
  namespace: shopno-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jitsi-jicofo.shopnoltd.dpdns.org
      secretName: jitsi-jicofo-tls
  rules:
    - host: jitsi-jicofo.shopnoltd.dpdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: jitsi-jicofo
                port:
                  number: 80
